force-app/main/default/objects/Initiative__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Enter the date that the initiative is due to complete if known</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>