force-app/main/default/objects/Initiative__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <inlineHelpText>Breifly describe the result, impact or overall outcome of the inititive on completion</inlineHelpText>
    <label>Outcome</label>
    <type>TextArea</type>
</CustomField>