force-app/main/default/objects/Initiative__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Enter the date the initiative is due to start</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>