force-app/main/default/objects/Initiative__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <inlineHelpText>Briefly describe the purpose or strategy of this specific initiative</inlineHelpText>
    <label>Strategy</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>