force-app/main/default/objects/Initiative__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending,Active</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>