force-app/main/default/objects/Initiative__c/listViews/OGSM_May_2015.listView-meta.xml
<ListView>
    <fullName>OGSM_May_2015</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Target</value>
    </filters>
    <label>Village Target Lists</label>
    <language>en_US</language>
</ListView>