force-app/main/default/objects/Initiative__c/listViews/Roadmaps.listView-meta.xml
<ListView>
    <fullName>Roadmaps</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Strategy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Roadmap</value>
    </filters>
    <label>Roadmaps</label>
</ListView>