force-app/main/default/objects/Initiative__c/listViews/X2019_Target_Lists.listView-meta.xml
<ListView>
    <fullName>X2019_Target_Lists</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2019</value>
    </filters>
    <label>2019 Target Lists</label>
    <language>en_US</language>
</ListView>